--- a/css/typesetting.css
+++ b/css/typesetting.css
@@ -1,30 +1,20 @@
 @media print, screen and (min-width: 640px) {
-  * {
-    max-width: 40em;
-  }
-  code {
-    font-size: 90%;
-    line-height: 1.4;
-  }
-  body {
-    margin-top: 5em;
-    margin-bottom: 5em;
-    margin-right: 2em;
-    margin-left:  2em;
-  }
-  pre {
-    padding-top: 1em;
-    padding-left: 2em;
-    padding-right: 2em;
-    padding-bottom: 1em;
-    border: solid 1px;
-    border-radius: 1em;
-    white-space: pre-wrap;
-  }
+*{
+max-width:40em;
 }
-@media only screen and (max-width: 640px) {
-    * {
-      max-width: 100%;
-      width: 100%;
-    }
+code{
+font-size:90%; line-height:1.4;
+}
+body{
+margin-top:5em; margin-bottom:5em; margin-right:2em; margin-left:2em;
+}
+pre{
+padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em;
+border:solid 1px; border-radius:1em; white-space:pre-wrap;
+}
+}
+@media only screen and (max-width:640px) {
+*{
+max-width:100%; width:100%;
+}
 }
