--- a/css/typesetting.css
+++ b/css/typesetting.css
@@ -6,7 +6,7 @@ code{
 font-size:90%; line-height:1.4;
 }
 body{
-margin-top:5em; margin-bottom:5em; margin-right:2em; margin-left:3em; line-height:1.5;
+margin-top:5em; margin-bottom:5em; margin-right:2em; margin-left:3em; line-height:1.75; letter-spacing:0.05em;
 }
 pre{
 padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0;
