--- a/css/typesetting.css
+++ b/css/typesetting.css
@@ -1,12 +1,9 @@
 @media print, screen and (min-width: 640px) {
-*{
-max-width:40em;
-}
 code{
 font-size:90%; line-height:1.4;
 }
-body{
-margin-top:5em; margin-bottom:5em; margin-right:2em; margin-left:3em; line-height:1.75; letter-spacing:0.05em;
+.inner{
+margin:auto auto; line-height:1.75; letter-spacing:0.05em; width:38em;
 }
 pre{
 padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0;
